main/default/objects/Coverage_Limits_Deductibles__c/Coverage_Limits_Deductibles__c.object-meta.xml
<CustomObject>
    <label>Limits &amp; Deductibles</label>
    <nameField>
        <label>Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limits &amp; Deductibles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>