main/default/objects/Coverage_Limits_Deductibles__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>