main/default/objects/Coverage_Limits_Deductibles__c/fields/Endorsement_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Data_Type__c</fullName>
    <label>Endorsement Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Fixed value</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>