main/default/objects/Coverage_Limits_Deductibles__c/fields/Limit_Deductible_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Deductible_Type__c</fullName>
    <label>Limit Deductible Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>