main/default/objects/Coverage_Limits_Deductibles__c/fields/LmtDedCode__c.field-meta.xml
<CustomField>
    <fullName>LmtDedCode__c</fullName>
    <label>LmtDedCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>