main/default/objects/Coverage_Limits_Deductibles__c/fields/Parent_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Parent_Coverage__c</fullName>
    <label>Parent Coverage</label>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Limits &amp; Deductibles</relationshipLabel>
    <relationshipName>FeaturesProductOptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>