main/default/objects/Coverage_Limits_Deductibles__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>