main/default/objects/Coverage_Limits_Deductibles__c/fields/Sync_From__c.field-meta.xml
<CustomField>
    <fullName>Sync_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync From</label>
    <referenceTo>Coverage_Limits_Deductibles__c</referenceTo>
    <relationshipLabel>Limits &amp; Deductibles</relationshipLabel>
    <relationshipName>Limits_Deductibles</relationshipName>
    <type>Lookup</type>
</CustomField>