main/default/objects/Coverage_Limits_Deductibles__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PerPolicyAggregate</fullName>
            </value>
            <value>
                <fullName>PerAssetAggregate</fullName>
            </value>
            <value>
                <fullName>PerPolicyPerOccurrence</fullName>
            </value>
            <value>
                <fullName>PerAssetPerOccurrence</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Binary</fullName>
            </value>
            <value>
                <fullName>Coinsurance</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>