main/default/objects/Coverage_Limits_Deductibles__c/recordTypes/Deductible_Option.recordType-meta.xml
<RecordType>
    <fullName>Deductible_Option</fullName>
    <active>true</active>
    <description>The Deductibles that can apply to this coverage. Coverages can have multiple types of Deductibles each with their own unique set of amounts.</description>
    <label>Deductible Option</label>
</RecordType>