main/default/objects/Coverage_Limits_Deductibles__c/recordTypes/Limit_Option.recordType-meta.xml
<RecordType>
    <fullName>Limit_Option</fullName>
    <active>true</active>
    <description>The limit(s) that can apply to this coverage. Coverages can have multiple types of Limits, each with their own unique set of amounts.</description>
    <label>Limit Option</label>
</RecordType>