main/default/objects/Coverage_Limits_Deductibles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Coverage__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Page_Section__c</columns>
    <columns>LmtDedCode__c</columns>
    <columns>Sync_From__c</columns>
    <columns>Limit_Deductible_Type__c</columns>
    <columns>Endorsement_Data_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>