main/default/objects/Coverage_Limits_Deductibles__c/listViews/MPL_Limits_and_Deductibles_only.listView-meta.xml
<ListView>
    <fullName>MPL_Limits_and_Deductibles_only</fullName>
    <columns>NAME</columns>
    <columns>LmtDedCode__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Sync_From__c</columns>
    <columns>Parent_Coverage__c</columns>
    <columns>Page_Section__c</columns>
    <columns>Limit_Deductible_Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Endorsement_Data_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>equals</operation>
        <value>MPL</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage_Limits_Deductibles__c.Limit_Option</value>
    </filters>
    <label>MPL Limits and Deductibles only</label>
</ListView>